--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ readme = "README.md"
 authors = [
     { name = "barabasz", email = "exifsort@anba.ovh" }
 ]
-license = "MIT"
+license = { text = "MIT" }
+
 requires-python = ">=3.13"
 classifiers = [
     "Development Status :: 5 - Production/Stable",
@@ -30,7 +31,10 @@ keywords = [
     "photo-organization"
 ]
 
-dependencies = []
+dependencies = [
+    "TyConf",
+    "PyExifTool"
+]
 
 [project.optional-dependencies]
 toml = ["tomli-w>=1.0.0"]
@@ -49,6 +53,9 @@ Repository = "https://github.com/barabasz/exifsort"
 Issues = "https://github.com/barabasz/exifsort/issues"
 Changelog = "https://github.com/barabasz/exifsort/blob/main/CHANGELOG.md"
 
+[project.scripts]
+exifsort = "exifsort.core:main"
+
 [tool.black]
 line-length = 100
 target-version = ["py313"]
@@ -56,8 +63,6 @@ target-version = ["py313"]
 [tool.ruff]
 target-version = "py313"
 line-length = 100
-
-# Exclude directories
 exclude = [
     ".git",
     ".mypy_cache",
@@ -69,23 +74,8 @@ exclude = [
 ]
 
 [tool.ruff.lint]
-# Enable these rule sets (moved from top-level)
-select = [
-    "E",   # pycodestyle errors
-    "W",   # pycodestyle warnings
-    "F",   # pyflakes
-    "I",   # isort (import sorting)
-    "N",   # pep8-naming
-    "UP",  # pyupgrade
-    "B",   # flake8-bugbear
-    "C4",  # flake8-comprehensions
-    "SIM", # flake8-simplify
-]
-
-# Ignore these rules (moved from top-level)
-ignore = [
-    "E501",  # line too long (handled by black)
-]
+select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
+ignore = ["E501"]
 
 [tool.ruff.format]
 quote-style = "double"
