--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,12 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
-    
+
+    - name: Install system dependencies (ExifTool)
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libimage-exiftool-perl
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
