--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "exifsort"
-version = "0.2.2"
+version = "0.2.3+20251123"
 description = "ExifSort - sort media files into date-based folders by reading EXIF creation date."
 readme = "README.md"
 authors = [
     { name = "barabasz", email = "exifsort@anba.ovh" }
 ]
-license = { text = "MIT" }
+license = "MIT"
 
 requires-python = ">=3.13"
 classifiers = [
@@ -32,7 +32,6 @@ keywords = [
 ]
 
 dependencies = [
-    "TyConf",
     "PyExifTool"
 ]
 
